...
    <string name="intent_example">Other Example</string>
    <string name="phone">Phone</string>
    <string name="map_of_brno">Map of FAI UTB</string>
    <string name="calendar_event">Calendar Event</string>

    <string name="registeruser">registeruser</string>
    <string name="welcome">Welcome</string>
    <string name="add_product">Add Product</string>
    <string name="view_store">View Products</string>
    <string name="about_us">Extra</string>
    <string name="logout">Logout</string>
    <string name="todo">TODO</string>
    <string name="grocery">Grocery</string>
...
